<resources>
    <string name="app_name">Fancoin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string-array name="star_categories">
        <item>Select a Category</item>
        <item>Tiktok</item>
        <item>Entertainment</item>
        <item>Music</item>
    </string-array>
    <string-array name="social_options">
        <item>Select a Social Media</item>
        <item>Tiktok</item>
        <item>Instagram</item>
        <item>Youtube</item>
    </string-array>


    <string name="settings_language_title">Language Settings</string>
    <string name="settings_menu_item_language">Language</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle_1">Account Settings</string>
    <string name="settings_subtitle_2">Contact Details</string>
    <string name="settings_subtitle_3">App Settings</string>
    <string name="settings_menuitem_profile">Profile</string>
    <string name="settings_menuitem_account">Account Information</string>
    <string name="settings_menuitem_manage">Manage Videos</string>
    <string name="settings_menuitem_mail">Email Address</string>
    <string name="settings_menuitem_phone">Phone Number</string>
    <string name="addShowcaseVideo_title">Add Showcase Video</string>
    <string name="addShowcaseVideo_select">Select a video</string>
    <string name="addShowcaseVideo_upload">Upload Video</string>
    <string name="administration_title">Administration</string>
    <string name="application_title">Apply to be Star</string>
    <string name="application_info_title">Apply to join Fancoin</string>
    <string name="application_subtitle">Fill out the form below and we will get back to you within 72 hours</string>
    <string name="application_nameInput">Full Name</string>
    <string name="application_nameInput_placeholder">Full Name</string>
    <string name="application_emailInput">Email</string>
    <string name="application_emailInput_placeholder">Email</string>
    <string name="application_categoryInput">Choose a category</string>
    <string name="application_socialInput">Where is your largest Following?</string>
    <string name="application_usernameInput">Username for largest following?</string>
    <string name="application_usernameInput_placeholder">/@username</string>
    <string name="application_followersInput">Number of Followers?</string>
    <string name="application_apply">Apply</string>
    <string name="application_disclaimer">By applying, you agree to the terms of services of fancoin, including the additional terms and requirements</string>
    <string name="applicationSuccess_infoTitle">Application Submitted</string>
    <string name="applicationSuccess_infoSubtitle">Your application has been well received, we will verify your identify in upcoming days</string>
    <string name="forgotPass_infoTitle">Reset Password</string>
    <string name="forgotPass_infoSubtitle">Enter a valid email</string>
    <string name="forgotPass_resetPassword">Reset Password</string>
    <string name="login_passwordInput">Password</string>
    <string name="login_required">Required</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_forgotPass">Forgot Password</string>
    <string name="login_signUpRedirect">Don\'t have an account? Sign Up</string>
    <string name="myOrders_title">Video Requests</string>
    <string name="orderDetails_title">Order Details</string>
    <string name="orderDetails_infoTitle">You ordered from</string>
    <string name="orderDetails_infoName_Placeholder">Placeholder Name</string>
    <string name="orderDetails_infoPricing_placeholder">placeholder pricing</string>
    <string name="orderDetails_info2Title">Order Details</string>
    <string name="data_placeholder">(data)</string>
    <string name="orderDetails_info2Recipient">Recipient :</string>
    <string name="orderDetails_info2Description">Description :</string>
    <string name="orderDetails_bottomCardTitle">artist replied to you</string>
    <string name="orderDetails_bottomCardSubtitle">Your personalized video is ready!</string>
    <string name="orderDetails_bottomCardButton">Watch Video</string>
    <string name="orderReply_title">Order Reply</string>
    <string name="orderReply_bottomCardButton">Reply</string>
    <string name="orderVideo_title">Order Video</string>
    <string name="artist_name">Artist Name</string>
    <string name="artist_description">Artist Description</string>
    <string name="fill_the_form">Fill the Form</string>
    <string name="recipient">Recipient</string>
    <string name="order">Order</string>
    <string name="details">Details</string>
    <string name="follow">Follow</string>
    <string name="unfollow">unfollow</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="no_comments">No Comments</string>
    <string name="get_video">Get Video</string>
    <string name="name">name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_signInRedirect">Already have an account? Sign In</string>
    <string name="requests">Requests</string>
    <string name="pricing">Pricing</string>
    <string name="save">Save</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="settingsEmail_title">Email Settings</string>
    <string name="settingsManage_bottomCardTitle">Select the showcase videos to display on your profile</string>
    <string name="add_video">Add Video</string>
    <string name="settingsPhaone_title">Phone Settings</string>
    <string name="settingsProfile_title">Profie Settings</string>
    <string name="settingsProfile_changeImage">Change your Image</string>
    <string name="username">Username</string>
    <string name="settingsTheme_title">Theme Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="orderSuccess_infoTitle">Order Successful to</string>
    <string name="orderSuccess_infoSubtitle">Your order has been well received, you should be getting a feedback in upcoming days</string>
    <string name="unverifiedEmail_infoTitle">Please Verify Email</string>
    <string name="unverifiedEmail_infoSubtitle">Email verification sent, please verify and try again</string>
    <string name="unverifiedEmail_resend">Resend Verification</string>
    <string name="adminUser_title">User Details</string>
    <string name="adminUser_infoTitle">User Information</string>
    <string name="social">Social</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="pending">Pending</string>
    <string name="wallet">Wallet</string>
    <string name="coming_soon">Coming soon</string>
    <string name="write_a_review">Write a review</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="following">Following</string>
    <string name="browse">Browse</string>
    <string name="entertainment">Entertainment</string>
    <string name="music">Music</string>
    <string name="inbox">Inbox</string>
    <string name="no_videos">No videos</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_order">Your order</string>
    <string name="orderBottomSheet_subtitle">You are about to order from ,</string>
    <string name="hello_world">Hello world</string>
    <string name="signing_in_text_loading">Signing In...</string>
    <string name="sign_in_successful_message">Sign In Successful!</string>
    <string name="verify_your_email_text">Verify your email</string>
    <string name="verify_credentials_signin">Sign In Failed!, please verify credentials</string>
    <string name="sign_in">Sign In</string>
    <string name="empty_credentials">Empty Credentials!</string>
    <string name="password_too_short">Password too short</string>
    <string name="phone_number_too_short">Phone Number too short</string>
    <string name="reset_link_message">Your reset link has been sent to your email, verify your inbox</string>
    <string name="reset_link_sent">Reset Link sent</string>
    <string name="user_doesnt_exist_forgotpass">"User doesn't exist, try again "</string>
    <string name="invalid_email_text">Invalid Email</string>
    <string name="sending_email_text">Sending Email...</string>
    <string name="choose_valid_video">Choose Valid Video</string>
    <string name="error_getting_data">Something went wrong, try again</string>
    <string name="please_fill_all_fields_form">Please fill all fields</string>
    <string name="application_submitted">Application Submitted</string>
    <string name="unable_to_submit_form">Unable to Submit, Please try again.</string>
    <string name="application_submitted_for">"Application Submitted for "</string>
    <string name="logged_out_message">Logged Out!</string>
    <string name="your_personallized_video_from">"Your personallized video from "</string>
    <string name="personalise_video_is_ready">" is ready!"</string>
    <string name="star_hasnt_replied">" has not replied to you yet"</string>
    <string name="waiting_for_star">"Waiting for "</string>
    <string name="star_to_reply">" to reply!"</string>
    <string name="order_recipient_and_description">Please Input Recipient and Description</string>
    <string name="unable_to_send_order">Order not sent, Pleas try again</string>
    <string name="unable_to_update_post">Unable to update</string>
    <string name="please_enter_a_comment_post">Please enter a comment</string>
    <string name="comment_sent_post">Comment Sent</string>
    <string name="order_successful_to">"Order Successful to "</string>
    <string name="video_uploaded_successfully">Video Uploaded Successfully!</string>
    <string name="you_replied_to">"You replied to "</string>
    <string name="status_updated">Status Updated</string>
    <string name="receive_updates"> to receive updates when they post</string>
    <string name="no_bio">no bio, update in settings</string>


    //Headings
    <string name="heading_one">Personalized Videos</string>
    <string name="heading_two">Discover New Artists</string>
    <string name="heading_three">Share Special Moments</string>
    <string name="heading_fourth">Discuss Privately</string>

    //Description
    <string name="desc_one">Get personalized videos and messages from your favorite artists</string>
    <string name="desc_two">Discover some amazing upcoming artists</string>
    <string name="desc_three">Share some special moments and creating unique memories</string>
    <string name="desc_fourth">Talk with celebrities one on one</string>
    <string name="profile">Profile</string>
    <string name="inbox2">Inbox</string>
    <string name="upload_successfull">Upload Successfull</string>
    <string name="Upload_success_subtitle">You can view the video now on your profile</string>
    <string name="settings_profile_subtext">This is your email. This email is visible to your contacts</string>
    <string name="title_activity_fullscreen_video">FullscreenVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>