<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplicationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/apply_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_back_arrow"
            app:tint="@color/icon_tint" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_title"
            android:textColor="@color/text_tint"
            android:textSize="@dimen/topbar_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/application_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_info_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/application_subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:text="@string/application_subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/application_title"
                    app:layout_constraintTop_toBottomOf="@+id/application_title" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/application_nameInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="@+id/application_subTitle"
                    app:layout_constraintTop_toBottomOf="@+id/application_profile_image" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/application_profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cardbg"
                    android:padding="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/application_subTitle"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apply_full_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/application_nameInput_placeholder"
                    app:counterMaxLength="100"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    app:startIconDrawable="@drawable/ic_user_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apply_full_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:inputType="text"
                        android:enabled="false"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/apply_title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_emailInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_full_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apply_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/application_emailInput_placeholder"
                    android:textColor="@color/text_tint"
                    app:counterMaxLength="100"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_title_email"
                    app:startIconDrawable="@drawable/ic_mail_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apply_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:enabled="false"
                        android:inputType="textEmailAddress"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/apply_title_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_categoryInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_email" />


                <Spinner
                    android:id="@+id/apply_category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/customborder"
                    android:entries="@array/star_categories"
                    android:spinnerMode="dialog"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_title_category" />


                <TextView
                    android:id="@+id/apply_title_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_socialInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_category" />

                <Spinner
                    android:id="@+id/apply_social"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/customborder"
                    android:entries="@array/social_options"
                    android:spinnerMode="dialog"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_title_social" />

                <TextView
                    android:id="@+id/apply_title_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_usernameInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_social" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apply_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/application_usernameInput_placeholder"
                    app:counterMaxLength="100"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_title_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apply_username_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:inputType="text"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/apply_title_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/application_followersInput"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_username" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apply_followres_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="1000"
                    app:counterMaxLength="100"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_title_followers">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apply_followers_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:inputType="number"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/apply_disclaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/application_disclaimer"
                    android:textSize="12sp"
                    android:textColor="@color/text_tint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_followres_number" />

                <Button
                    android:id="@+id/apply_submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:bottomLeftRadius="10dp"
                    android:bottomRightRadius="10dp"
                    android:text="@string/application_apply"
                    android:topLeftRadius="10dp"
                    android:topRightRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_disclaimer" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>